# ROS

./: README.txt
results/: Evaluation_metrices_data.ods
src/catbot/: CMakeLists.txt  package.xml
src/catbot/config/: catbot_control.yaml  rviz_A_star.rviz  rviz_rrt.rviz
src/catbot/launch/: A_star_main.launch  A_star_zc_main.launch  gazebo_map.launch  gazebo_map_zc.launch  move_base_A_star.launch  move_base_A_star_zc.launch  rrt.launch  rrt_main.launch  rrt_zc.launch  rrt_zc_main.launch
src/catbot/maps/: map.yaml  zc_hall.yaml
src/catbot/param/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  move_base_params.yaml
src/catbot/src/: amcl_pos_publisher.cpp  goal_publisher_A_star.cpp  goal_publisher_rrt.cpp  watcher_A_star.cpp  watcher_rrt.cpp
src/catbot/urdf/: catbot.urdf
src/catbot/worlds/map/: map.world  model.config  model.sdf  zc_hall.sdf  zc_hall.world
src/riskrrt/launch/: amcl_sim.launch
src/riskrrt/params/: riskrrt_params_2.yaml
src/riskrrt/src/: planner.cpp  riskrrt.cpp
